kubernetes/api-gateway-service/networking/api-gateway-service-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-service
  namespace: default
spec:
  hosts:
    - api-gateway-service.default.svc.cluster.local
  http:
    - route:
      - destination:
          host: api-gateway-service.default.svc.cluster.local
      retries:
        attempts: 4
        perTryTimeout: 2.5s
